# ch32-iap-bootloader

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
.zed/: settings.json
bootloader/: Cargo.toml
bootloader/examples/boot/: Cargo.toml
ch32/: Cargo.toml  README.md  build.rs  split-sysflash.x
ch32/app/: Cargo.toml  README.md
ch32/boot/: Cargo.toml
ch32/boot/src/: lib.rs
ch32/hal/: Cargo.toml  README.md
ch32/rt/: Cargo.toml
ch32/rt/src/: lib.rs  start.S
ch32/src/: app.rs  boot.rs  lib.rs
ch32/src/app/: mod.rs
ch32/src/boot/: mod.rs
ch32/src/hal/: boot_request.rs  mod.rs
ch32/src/platform/: boot_ctl.rs  boot_meta_store.rs  storage.rs
cli/: Cargo.toml
core/: Cargo.toml
docs/: contributing.md  demo.tape  porting-series.md
examples/ch32/system-flash/: README.md
lib/: Cargo.toml
lib/core/: Cargo.toml  tb-app.x  tb-boot.x
lib/core/src/: protocol.rs  ringbuf.rs
lib/core/tests/: state_transitions.rs
lib/macros/: Cargo.toml
lib/macros/src/: lib.rs
lib/protocol/: Cargo.toml  README.md
lib/protocol/src/: lib.rs
scripts/: pre-commit
smol-boot-ch32/: Cargo.toml
tiny-boot/src/: lib.rs  traits.rs
tinyboot/: Cargo.toml  README.md
tinyboot-ch32/: Cargo.toml  README.md  build.rs
tinyboot-ch32-app/: Cargo.toml  README.md
tinyboot-ch32-app/src/: lib.rs
tinyboot-ch32-boot/: Cargo.toml  README.md  build.rs
tinyboot-ch32-boot/src/: lib.rs
tinyboot-ch32-boot/src/platform/: boot_ctl.rs  boot_state.rs  mod.rs  storage.rs
tinyboot-ch32-hal/: Cargo.toml  README.md  build.rs
tinyboot-ch32-hal/src/: boot_request.rs  lib.rs
tinyboot-ch32-hal/src/afio/: v0.rs  v3.rs
tinyboot-ch32-hal/src/flash/: mod.rs  v0.rs  v1.rs
tinyboot-ch32-hal/src/pfic/: rv2.rs
tinyboot-ch32-hal/src/rcc/: v0.rs
tinyboot-ch32-hal/src/usart/: usart_common.rs
tinyboot-ch32/src/: app.rs
tinyboot-cli/: Cargo.toml  README.md
tinyboot-cli/src/: main.rs
tinyboot-protocol/: Cargo.toml  README.md
tinyboot-protocol/src/: command.rs  crc.rs  frame.rs  lib.rs  response.rs
tinyboot/src/: core.rs  crc.rs  lib.rs  log.rs  protocol.rs  traits.rs
tinyboot/tests/: state_transitions.rs
(+53 files in other folders)
