[workspace]
members = ["core", "protocol", "macros"]
resolver = "2"

[workspace.package]
edition = "2024"
repository = "https://github.com/OpenServoCore/tinyboot"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tinyboot-macros = { version = "0.2.1", path = "macros" }
tinyboot-protocol = { version = "0.2.1", path = "protocol" }
defmt = "1.0"
embedded-io = "0.7"
embedded-io-async = "0.7"
embedded-storage = "0.3"

[profile.dev]
opt-level = "z"
lto = true
codegen-units = 1
debug = 2

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
